src/objects/WIN_Contributor__c.object
<CustomObject>
    <description>Records users can associate themselves to WINs for credit.</description>
    <fields>
        <fullName>Contributor_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contributor Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contributor_Names</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contributor__c</fullName>
        <description>User first and last name</description>
        <formula>Contributor_Name__r.FirstName &amp; &quot; &quot; &amp; Contributor_Name__r.LastName</formula>
        <label>Contributor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <description>To identify users who are not active from displaying in related list. Also to sort by long views.</description>
        <formula>IF( Contributor_Name__r.IsActive &lt;&gt; TRUE, TRUE, FALSE)</formula>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Office__c</fullName>
        <formula>TEXT(Contributor_Name__r.RH_Lev_6_Office__c)</formula>
        <label>Office</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <formula>WIN__r.Organization__c</formula>
        <label>Organization</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Office__c</fullName>
        <formula>RH_Lev_6_Office__c</formula>
        <label>Original Office</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RH_Lev_1_GM_All__c</fullName>
        <label>User Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RH_Lev_2_DAS__c</fullName>
        <label>User DAS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RH_Lev_3_Region_2__c</fullName>
        <label>User Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RH_Lev_4_Region_1__c</fullName>
        <label>User Sub-region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RH_Lev_5_Country__c</fullName>
        <label>User Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RH_Lev_6_Office__c</fullName>
        <label>User Office</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RH_Lev_7_Individual__c</fullName>
        <label>User Agency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WIN_Contributor_ID__c</fullName>
        <description>CasesafeID(Contributor_Name__r.Id)</description>
        <formula>Contributor_Name__r.Id</formula>
        <label>WIN Contributor ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WIN_Contributor_One__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WIN Contributor One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WIN__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WIN</label>
        <referenceTo>WIN__c</referenceTo>
        <relationshipName>Contributors</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>WIN Contributor</label>
    <nameField>
        <displayFormat>WCR-{0000}</displayFormat>
        <label>WINs Contributor Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WIN Contributors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>If_related_WIN_is_approved_limit_contrib</fullName>
        <active>true</active>
        <description>After a WIN is approved (where the Status value is set to Approved), the system shall only allow users with the Network Director/ICO role to edit the Contributor Related List. This is backdoor method to modify contributors on win</description>
        <errorConditionFormula>TEXT(WIN__r.Final_Line_Approval__c) = &quot;Approved&quot; &amp;&amp;  $User.Can_Modify_Locked_WINs__c = FALSE</errorConditionFormula>
        <errorMessage>After final approval, no users may make changes to contributor list.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Only_Sys_Admin_add_contr_locked_win</fullName>
        <active>false</active>
        <description>$User.ProfileId &lt;&gt; &quot;00et0000000U7uP&quot; &amp;&amp; WIN__r.RecordTypeId = &quot;012r000000005n3&quot;</description>
        <errorConditionFormula>$User.ProfileId &lt;&gt; &quot;00et0000000U7uP&quot; &amp;&amp; WIN__r.RecordTypeId = &quot;012r000000005n3&quot;</errorConditionFormula>
        <errorMessage>Only system administrator can modify a contributor.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Required_WIN_Contributor_Name</fullName>
        <active>true</active>
        <description>WIN Contributor Name is Required. Added to prevent Process Builder flow error when user saves record without populating Contributor Name field</description>
        <errorConditionFormula>Contributor_Name__c = &quot;&quot; &amp;&amp; 
($Profile.Name &lt;&gt; &quot;System Administrator&quot;)</errorConditionFormula>
        <errorMessage>Contributor Name is Required.</errorMessage>
    </validationRules>
</CustomObject>